--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name=keywords content="中国空间站,天宫空间站,实时位置,航天,娱乐">
+    <meta name=description content="中国空间站运行轨迹图上线了，追踪天宫空间站的实时位置，戳进去看看吧！✨🌏">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
